--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -19,7 +19,7 @@
           
         </activity>
          <activity
-            android:name="com.mojichina.demo.PropertyAnimActivity"
+            android:name="com.mojichina.demo.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
